# tg_chat_history_dump_bot

./: Readme.md  pyproject.toml
src/: bot.py
