[project]
name = "tg-chat-history-dump-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "yadisk>=3.4.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
